package com.uitopic.restock.platform.tracking.domain.model.entities;

import com.uitopic.restock.platform.shared.domain.model.valueobjects.DeviceId;
import com.uitopic.restock.platform.tracking.domain.model.valueobjects.DiscrepancyLevel;
import com.uitopic.restock.platform.tracking.domain.model.valueobjects.DiscrepancyStatus;
import lombok.*;

/**
 * Entity representing a discrepancy in inventory tracking. It captures the details of the discrepancy, including its unique identifier, risk level, quantity difference, and associated device ID. This entity is used to track and manage inventory discrepancies within the system.
 */
@Data
@NoArgsConstructor
@AllArgsConstructor
@With
public class Discrepancy {

    /**
     * The unique identifier for the discrepancy, generated by the system. This is used to track and reference specific discrepancies in the inventory tracking process.
     */
    private String id;

    /**
     * The risk level of the discrepancy, provided by the request. This indicates the severity of the inventory discrepancy.
     */
    private DiscrepancyLevel riskLevel;

    /**
     * The quantity difference between the physical and system inventory levels, provided by the comparison task.
     */
    private Integer quantityDifference;

    /**
     * The status of the discrepancy, which can be "RESOLVED" or "UNRESOLVED". This is used to track the resolution process of the discrepancy.
     */
    private DiscrepancyStatus status;

    /**
     * The device ID associated with the discrepancy, provided by the request.
     */
    private DeviceId deviceId;

    /**
     * Creates a new Discrepancy entity with the specified risk level, quantity difference, and device ID. The unique identifier (id) is generated by the system and is not included in the constructor parameters.
     *
     * @param riskLevel the risk level of the discrepancy, provided by the request
     * @param quantityDifference the quantity difference between the physical and system inventory levels, provided by the comparison task
     * @param deviceId the device ID associated with the discrepancy, provided by the request
     */
    public Discrepancy(
            DiscrepancyLevel riskLevel,
            Integer quantityDifference,
            DeviceId deviceId
    ) {
        this.riskLevel = riskLevel;
        this.quantityDifference = quantityDifference;
        this.deviceId = deviceId;
        this.status = DiscrepancyStatus.UNRESOLVED; // Default status when a discrepancy is created
    }

    /**
     * Resolves the discrepancy by updating its status to "RESOLVED". This method can be called when the discrepancy has been addressed and no further action is required.
     */
    public void resolve() {
        this.status = DiscrepancyStatus.RESOLVED;
    }
}
