package com.uitopic.restock.platform.tracking.domain.model.entities;

import com.uitopic.restock.platform.shared.domain.model.valueobjects.DeviceId;
import com.uitopic.restock.platform.tracking.domain.model.commands.ReceiveTelemetryReadingCommand;
import com.uitopic.restock.platform.tracking.domain.model.valueobjects.HumidityRecord;
import com.uitopic.restock.platform.tracking.domain.model.valueobjects.StockRecord;
import com.uitopic.restock.platform.tracking.domain.model.valueobjects.TemperatureRecord;
import lombok.*;

import java.time.Instant;

/**
 * Entity representing a telemetry reading from a device, containing information about stock levels, temperature, humidity, and the timestamp of the reading. This entity is used to track inventory discrepancies and monitor environmental conditions in real-time.
 */
@Getter
@NoArgsConstructor
@AllArgsConstructor
@With
@EqualsAndHashCode
public class TelemetryReading {

    /**
     * Unique identifier for the telemetry reading, generated by the system.
     */
    private String id;

    /**
     * The physical stock level recorded by the device at the time of the reading.
     */
    private StockRecord physicalStock;

    /**
     * The temperature recorded by the device at the time of the reading, in degrees Celsius.
     */
    private TemperatureRecord temperatureInCelsius;

    /**
     * The humidity percentage recorded by the device at the time of the reading, as a value between 0 and 100.
     */
    private HumidityRecord humidityPercentage;

    /**
     * The timestamp when the telemetry reading was recorded, in ISO 8601 format. This represents the exact time the reading was taken by the device.
     */
    private Instant timestamp = Instant.now();

    /**
     * The unique identifier of the device that provided the telemetry reading. This is used to associate the reading with a specific device for tracking inventory discrepancies.
     */
    private DeviceId deviceId;

    /**
     * Creates a telemetry reading entity based on the provided command, extracting the relevant information from the command to populate the entity's fields.
     *
     * @param command the command containing the data for the telemetry reading, including physical stock, temperature, humidity, and device ID, provided by the request
     */
    public TelemetryReading(ReceiveTelemetryReadingCommand command) {
        this.physicalStock = command.physicalStock();
        this.temperatureInCelsius = command.temperatureInCelsius();
        this.humidityPercentage = command.humidityPercentage();
        this.deviceId = command.deviceId();
    }
}
