package com.uitopic.restock.platform.tracking.domain.model.valueobjects;

/**
 * Enumeration representing the level of discrepancy in inventory tracking.
 */
public enum DiscrepancyLevel {
    LOW,
    MEDIUM,
    HIGH
}
